--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,15 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    
+    # Redirect to public folder
+    RewriteCond %{REQUEST_URI} !^/public/
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
+
+# Prevent access to sensitive files
+<FilesMatch "^(\.env|\.git|composer\.(json|lock)|package(-lock)?\.json|\.htaccess)$">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
